Integrate MariaDB into the Travis CI gate

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,14 @@ matrix:
       - sudo mysql -h 127.0.0.1 -P 4000 -u root -D test -e "CREATE USER 'sqlancer'@'%' IDENTIFIED WITH mysql_native_password BY 'sqlancer'; GRANT ALL PRIVILEGES ON *.* TO 'sqlancer'@'%' WITH GRANT OPTION; FLUSH PRIVILEGES;"
       script:
         - TIDB_AVAILABLE=true mvn -Dtest=TestTiDB test
+    - name: MariaDB
+      jdk : oraclejdk11
+      before_install:
+      - sudo apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8
+      - sudo add-apt-repository 'deb [arch=amd64,arm64,ppc64el] http://ftp.utexas.edu/mariadb/repo/10.3/ubuntu bionic main'
+      - sudo apt update
+      - sudo apt install mariadb-server
+
     - name: sqlite
       jdk : oraclejdk11
       script:
